--- a/tesla-frontend/index.html
+++ b/tesla-frontend/index.html
@@ -21,6 +21,9 @@
     </header>
     <main>
         <p>Seleccione una opción del menú.</p>
+        <!-- Agregando la imagen -->
+        <img src="imagenes/tesla.png" alt="Imagen Tesla">
+
     </main>
 </body>
 </html>
