actualizacion del front

--- a/tesla-frontend/index.html
+++ b/tesla-frontend/index.html
@@ -25,5 +25,11 @@
         <img src="imagenes/tesla.png" alt="Imagen Tesla">
 
     </main>
+    
+    
 </body>
+<footer>
+    <h1>Accelerating the World’s Transition to Sustainable Energy</h1>
+</footer>  
+</hr>
 </html>
