--- a/tesla-frontend/clientes.html
+++ b/tesla-frontend/clientes.html
@@ -7,6 +7,24 @@
     <link rel="stylesheet" href="styles/styles.css">
     <script defer src="scripts/clientes.js"></script>
 </head>
+<!-- Modal para mostrar mensajes -->
+<div class="modal fade" id="mensajeModal" tabindex="-1" aria-labelledby="mensajeModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="mensajeModalLabel">Mensaje</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body" id="mensajeModalBody">
+        <!-- Aquí irá el mensaje -->
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 <body>
 
     <header>
